--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,11 @@
       "@/*": ["./*"]
     }
   },
+  "CompilerOptions": {
+    "paths": {
+      "@/fonts": ["./styles/fonts.ts"]
+    }
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
